--- a/src/app/utilitarios/estrellas/estrellas.component.html
+++ b/src/app/utilitarios/estrellas/estrellas.component.html
@@ -1,3 +1,6 @@
-<p>
-  estrellas works!
-</p>
+<div class="p-0">
+  <div class="d-inline-flex px-1" *ngFor="let star of estrellasCalificacion">
+    <fa-icon [icon]="faStar"size="sm"></fa-icon>
+    
+  </div>
+</div>
