--- a/src/app/paginas/iniciopagina/iniciopagina.component.html
+++ b/src/app/paginas/iniciopagina/iniciopagina.component.html
@@ -1,3 +1,3 @@
-<p>
-  iniciopagina works!
-</p>
+<div class="container-fluid">
+  <img src="https://a.storyblok.com/f/166586/1152x530/b79dec2f42/portada-feria-del-auto-riobamaba.jpg" class="img-fluid w-100 h-100" alt="..." style="padding: top 9em;">
+</div>
