--- a/src/app/paginas/paginalistavehiculos/paginalistavehiculos.component.html
+++ b/src/app/paginas/paginalistavehiculos/paginalistavehiculos.component.html
@@ -29,16 +29,16 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let autos of listafiltrada">
-          <td><img src="{{autos.image}}"class="img-thumbnail" alt="" *ngIf="mostrarImagenes"></td>
-          <td><a [routerLink]="['/autos', autos.codigo]">{{autos.codigo}}</a></td>
-          <td>{{autos.marca}}</td>
-          <td>{{autos.modelo}}</td>
-          <td>{{autos.anio}}</td>
-          <td>{{autos.color}}</td>
-          <td>{{autos.kilometraje|number}}</td>
-          <td>{{autos.precio|currency}}</td>
-          <td><app-estrellas [calificacion]="autos.calificacion"></app-estrellas></td>
+        <tr *ngFor="let auto of listafiltrada">
+          <td><img src="{{auto.image}}"class="img-thumbnail" alt="" *ngIf="mostrarImagenes"></td>
+          <td><a [routerLink]="['/autos', auto.codigo]">{{auto.codigo}}</a></td>
+          <td>{{auto.marca}}</td>
+          <td>{{auto.modelo}}</td>
+          <td>{{auto.anio}}</td>
+          <td>{{auto.color}}</td>
+          <td>{{auto.kilometraje|number}}</td>
+          <td>{{auto.precio|currency}}</td>
+          <td><app-estrellas [calificacion]="auto.calificacion"></app-estrellas></td>
           
         
         
